<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                tools:src="@android:color/darker_gray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/img_item_photo"
                android:layout_toRightOf="@id/img_item_photo"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/sahabat_name" />
                <TextView
                    android:id="@+id/tv_item_short_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    tools:text="@string/short_description" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_item_description"
            style="@style/TextContent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            tools:text="@string/description" />

        <TableLayout
            style="@style/TextContent"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/Bio.field"
                    android:text="@string/born"/>
                <TextView
                    style="@style/Bio.value"
                    android:id="@+id/tv_item_born"
                    android:text="@string/born_value" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/Bio.field"
                    android:text="@string/died"/>
                <TextView
                    style="@style/Bio.value"
                    android:id="@+id/tv_item_died"
                    android:text="@string/died_value"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</FrameLayout>